--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -38,3 +38,9 @@ input, button, textarea, select {
 p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
 }
+
+ul, ol {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
