refactor to use shadow dom

--- a/src/components/project-panel/index.inline.html
+++ b/src/components/project-panel/index.inline.html
@@ -1,8 +1,8 @@
 <span class="flash"></span>
-<inter-link>
+<x-link>
   <img alt="" />
   <div>
     <h3></h3>
     <p></p>
   </div>
-</inter-link>
+</x-link>
