--- a/src/components/code-block/index.inline.css
+++ b/src/components/code-block/index.inline.css
@@ -13,7 +13,34 @@ pre {
   box-sizing: border-box;
 }
 
-pre[class*=language-] {
+pre[class*=language-] { /* just to create stronger selector to override default */
   background: #111;
   border: 1px solid #222;
+  margin: 0;
+}
+
+code {
+  display: inline-block;
+  position: relative;
+
+}
+
+.overlay {
+  position: absolute;
+  background: #000000;
+  inset: -1em;
+  pointer-events: none;
+  opacity: 0.7
+}
+
+:host(:hover) .overlay {
+  opacity: 0.2
+}
+
+.overlay-before {
+  bottom: 100%;
+}
+
+.overlay-after {
+  top: 100%;
 }
