--- a/src/pages/home/styles.scss
+++ b/src/pages/home/styles.scss
@@ -18,13 +18,12 @@ home-page {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 10px;
+    gap: 20px;
     margin-block-start: 30px;
   }
 
   .panel {
-    /* min-width: 30%; */
-    max-width: 40%;
-    flex: 1 1 30%;
+    // max-width: 450px;
+    flex: 0 0 350px;
   }
 }
