--- a/src/components/project-stepper-item/styles.raw.scss
+++ b/src/components/project-stepper-item/styles.raw.scss
@@ -1,55 +1,57 @@
-* {box-sizing: border-box;}
-
-:host {
+project-stepper-item {
   flex: 1 1 0;
   line-height: var(--size-factor);
-}
-.number {
-  display: inline-block;
-  font-size: calc(20px * var(--size-factor));
-  line-height: 1.5em;
-  font-weight: 600;
-  color: #ffffffdd;
-  vertical-align: middle;
-  text-align: center;
-  width: calc(30px * var(--size-factor));
-  height: calc(30px * var(--size-factor));
-  border-radius: 50%;
-  background-color: #151240; /* pretends that is the color of the body */
-  /* var(--background); */
-  isolation: isolate; /* to be above :before position:absolute inside "project-stepper ol"*/
-}
-h6 {
-  display: inline-block;
-  margin: 0;
-  font-size: calc(22px * var(--size-factor));
-  font-weight: 400;
-  line-height: 1;
-  
-  vertical-align: middle;
-  padding-inline-start: calc(5px * var(--size-factor));
-  color: var(--background);
-  isolation: isolate; /* to be above :before position:absolute inside "project-stepper ol"*/
-}
-.details {
-  padding-block-start: calc(13px * var(--size-factor));
-  padding-inline-start: calc(13px * var(--size-factor));
-  display: flex;
-  align-items: end;
-}
+  .number:before {
+    counter-increment: step-order;
+    content: counter(step-order);
+  }
+  .number {
+    display: inline-block;
+    font-size: calc(20px * var(--size-factor));
+    line-height: 1.5em;
+    font-weight: 600;
+    color: #ffffffdd;
+    vertical-align: middle;
+    text-align: center;
+    width: calc(30px * var(--size-factor));
+    height: calc(30px * var(--size-factor));
+    border-radius: 50%;
+    background-color: #151240; /* pretends that is the color of the body */
+    /* var(--background); */
+    isolation: isolate; /* to be above :before position:absolute inside "project-stepper ol"*/
+  }
+  h6 {
+    display: inline-block;
+    margin: 0;
+    font-size: calc(22px * var(--size-factor));
+    font-weight: 400;
+    line-height: 1;
+    
+    vertical-align: middle;
+    padding-inline-start: calc(5px * var(--size-factor));
+    color: var(--background);
+    isolation: isolate; /* to be above :before position:absolute inside "project-stepper ol"*/
+  }
+  .details {
+    padding-block-start: calc(13px * var(--size-factor));
+    padding-inline-start: calc(13px * var(--size-factor));
+    display: flex;
+    align-items: end;
+  }
 
-.details:before {
-  content: "";
-  flex: 0 0 calc(5px * var(--size-factor));
-  align-self: stretch;
-  margin-right: calc(10px * var(--size-factor));
-  background-color: var(--text-primary);
-}
+  .details:before {
+    content: "";
+    flex: 0 0 calc(5px * var(--size-factor));
+    align-self: stretch;
+    margin-right: calc(10px * var(--size-factor));
+    background-color: var(--text-primary);
+  }
 
-p {
-  padding-top: calc(50px * var(--size-factor));
-}
+  p {
+    padding-top: calc(50px * var(--size-factor));
+  }
 
-:host(:not([details])) .details {
-  display: none;
+  &:not([details]) .details {
+    display: none;
+  }
 }
