--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -10,8 +10,8 @@
   --background-accent-b: #A1458560;
   --background-accent-c: #4556a160;
   --background-accent-d: #a100ff1f;
-  // --background-accent-d: #00ff151f;
-  // --background-accent-d: #00ffff1f;
+  /* --background-accent-d: #00ff151f; */
+  /* --background-accent-d: #00ffff1f; */
   --text-secondary: #ffffffbb;
   --text-primary: #ffffff;
 }
@@ -45,25 +45,25 @@ body {
     var(--background);
 
 
-    // background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
-    //         linear-gradient(127deg, rgba(0,255,0,.8), rgba(0,255,0,0) 70.71%),
-    //         linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
-  // background:
-  //   radial-gradient(circle at top left, transparent 15px, rgb(242, 76, 76) 0) top left,
-  //   radial-gradient(circle at top right, transparent 15px, rgb(122, 170, 85) 0) top right,
-  //   radial-gradient(circle at bottom right, transparent 15px, rgb(170, 85, 147) 0) bottom right,
-  //   radial-gradient(circle at bottom left, transparent 15px, #58a 0) bottom left;
-  // background: conic-gradient(
-  //   hsl(360 100% 50%),
-  //   hsl(315 100% 50%),
-  //   hsl(270 100% 50%),
-  //   hsl(225 100% 50%),
-  //   hsl(180 100% 50%),
-  //   hsl(135 100% 50%),
-  //   hsl(90 100% 50%),
-  //   hsl(45 100% 50%),
-  //   hsl(0 100% 50%)
-  // );
+     /* background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
+             linear-gradient(127deg, rgba(0,255,0,.8), rgba(0,255,0,0) 70.71%),
+             linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
+   background:
+     radial-gradient(circle at top left, transparent 15px, rgb(242, 76, 76) 0) top left,
+     radial-gradient(circle at top right, transparent 15px, rgb(122, 170, 85) 0) top right,
+     radial-gradient(circle at bottom right, transparent 15px, rgb(170, 85, 147) 0) bottom right,
+     radial-gradient(circle at bottom left, transparent 15px, #58a 0) bottom left;
+   background: conic-gradient(
+     hsl(360 100% 50%),
+     hsl(315 100% 50%),
+     hsl(270 100% 50%),
+     hsl(225 100% 50%),
+     hsl(180 100% 50%),
+     hsl(135 100% 50%),
+     hsl(90 100% 50%),
+     hsl(45 100% 50%),
+     hsl(0 100% 50%)
+   ); */
   background-size: contain;
   background-repeat: no-repeat;
   
@@ -71,23 +71,28 @@ body {
 
 .view {
   height: 100%;
-  overflow: auto; // to prevents vertical margins from transfering from children
-  transition: transform 1s ease, opacity 1s ease;
+  overflow: auto; /*to prevents vertical margins from transfering from children*/
+  transition: transform .5s ease, opacity .5s ease;
   transform: translateY(0px);
   opacity: 1;
 
-  &.new {
-    transform: translateY(50px);
-    opacity: 0;
-    transition-delay: 5s;
+  &.delay {
+    transition-delay: .1s;
   }
-
+  
+  &.new {
+    transform: translateY(30px);
+    opacity: 0;
+    /* transition-delay: 5s; */
+  }
+  
   &.old {
-    transform: translateY(-50px);
+    transform: translateY(-30px);
     opacity: 0;
     position: absolute;
     width: 100%; /* remember position absoltue work as inline, shrinks width */
     transition-delay: 0;
+    /* transition-delay: 5s;  this one works, odl one stays!!!! */
 
   }
 }
