--- a/src/components/project-panel/styles.css
+++ b/src/components/project-panel/styles.css
@@ -21,7 +21,8 @@ project-panel {
 
   --border-gradient-angle: 0turn;
 
-  box-shadow: 0px 4px 11px 3px rgba(255, 255, 255, 0.1);
+  box-shadow: 0px 0px 11px 3px rgba(255, 255, 255, 0.1);
+  transition: background-color 0.5s ease, transform 0.5s ease, box-shadow 0.5s ease;
 
   /* padding: var(--border-size); */
   /* overflow: hidden; */
@@ -40,19 +41,19 @@ project-panel {
     display: flex;
     text-decoration: none;
     background-color: #ffffff11;
+    background: linear-gradient(136deg, rgba(255, 255, 255, 0.067) 0%, rgba(255, 255, 255, 0.12) 20%, rgba(255, 255, 255, 0.067) 40%, rgba(255, 255, 255, 0.067) 65%, rgba(255, 255, 255, 0.05) 75%, rgba(255, 255, 255, 0.067) 85%);
     border: 2px solid #ffffff11;
-    transition: background-color 0.5s ease, transform 0.5s ease;
     /* background-color: rgba(11, 16, 43, 1); */
     /* overflow: hidden;  needed for effect of border */ 
     isolation: isolate;
     align-items: center;
     padding: 15px 25px;
-
   }
 
-  a:hover {
-    background-color: #ffffff22;
+  &:hover {
+    background-color: rgba(255, 255, 255, 0.08);
     transform: scale(1.05);
+    box-shadow: 0px 0px 11px 3px rgba(255, 255, 255, 0.2);
   }
 
   svg {
@@ -60,6 +61,7 @@ project-panel {
     min-width: 0;
     margin-inline-end: 20px;
     color: var(--text-secondary);
+    filter: drop-shadow(0 0 5px #ffffff33);
   }
 
   h3 {
