--- a/src/components/x-button/styles.css
+++ b/src/components/x-button/styles.css
@@ -1,20 +1,14 @@
 x-button {
   .btn_content {
+    color: inherit;
     padding: 8px 14px;
-    border-radius: 5px;
-    background: #ffffffaa;
-    color: black;
     font-size: 16px;
-    border: none;
     text-wrap: nowrap;
     line-height: 1.1;
     text-transform: uppercase;
     font-weight: 600;
-
     border-radius: 5px;
-    color: var(--text-primary); 
     display: flex;
-    text-decoration: none;
     background: linear-gradient(136deg, rgba(255, 255, 255, 0.167) 0%, rgba(255, 255, 255, 0.25) 20%, rgba(255, 255, 255, 0.167) 40%, rgba(255, 255, 255, 0.167) 65%, rgba(255, 255, 255, 0.14) 75%, rgba(255, 255, 255, 0.167) 85%);
     border: 2px solid #ffffff11;
     box-shadow: 0px 0px 8px 2px rgba(255, 255, 255, 0.1);
