measure output, add content

--- a/src/components/code-tabs/index.css
+++ b/src/components/code-tabs/index.css
@@ -13,18 +13,19 @@ code-tabs {
     line-height: 2;
     margin-inline-end: -1lh;
     filter: drop-shadow(0px 0px 8px var(--background));
+    --tabs-background: color-mix(in srgb, #000 40%, var(--code-background)); 
 
     /* &:not(:target) {
       --tabs-background: color-mix(in srgb, #000 20%, var(--code-background)); 
     } */
     &:hover {
-      --tabs-background: color-mix(in srgb, #fff 20%, var(--code-background)); 
+      --tabs-background: var(--code-background);
     }
   }
 
   [highlight='true'] {
     z-index: 1;
-    --tabs-background: color-mix(in srgb, #fff 20%, var(--code-background)); 
+    --tabs-background: var(--code-background);
   }
 
   button {
