--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -18,6 +18,7 @@
 
 html {
   font-family: "Roboto", sans-serif;
+  /* font-family: -apple-system, "system-ui", "Segoe UI", Roboto, Helvetica; */
   font-weight: 400;
   font-style: normal;
 }
@@ -99,4 +100,13 @@ body {
 
 .in-transition {
   overflow: hidden;
+}
+
+h1 {
+  text-align: center;
+  font-size: 70px;
+  font-weight: 200;
+  margin-block-start: 70px;
+  margin-block-end: 30px;
+  text-shadow: 0 0 15px #fff;
 }
