--- a/src/components/accordion-panel/styles.css
+++ b/src/components/accordion-panel/styles.css
@@ -1,15 +1,81 @@
 accordion-panel {
+  /* border-radius: 10px;
+  background: linear-gradient(136deg, rgba(255, 255, 255, 0.067) 0%, rgba(255, 255, 255, 0.12) 20%, rgba(255, 255, 255, 0.067) 40%, rgba(255, 255, 255, 0.067) 65%, rgba(255, 255, 255, 0.05) 75%, rgba(255, 255, 255, 0.067) 85%);
+  border: 2px solid #ffffff11;
+  isolation: isolate; */
+  align-items: center;
+  /* padding: 15px 25px; */
+
+  /* box-shadow: 0px 0px 11px 3px rgba(255, 255, 255, 0.1);
+  transition: background-color 0.5s ease, transform 0.5s ease, box-shadow 0.5s ease;
+
+   */
+
+  details > summary:first-of-type {
+    list-style-type: none;
+  }
+
   .content {
     display: grid;
     grid-template-rows: 0fr;
     transition: grid-template-rows 500ms;
   }
 
-  .content > div {
+  .overflow-hidden {
     overflow: hidden;
+  }
+
+  .wrapper {
+    padding: 0 25px 15px;
   }
 
   .is-open .content {
     grid-template-rows: 1fr;
+  }
+
+  summary {
+    font-size: 18px;
+    cursor: pointer;
+    padding: 15px 25px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    font-weight: 600;
+    text-shadow: 0 0 15px #ffffffaa;
+  }
+
+  .chevron {
+    display: block;
+    --size: 0.6lh;
+    --stroke-width: 1px;
+    width: var(--size);
+    height: var(--size);
+    transform-origin: 30% 30%;
+    transform: translateY(calc(var(--size) * .2)) rotate(-45deg);
+    transition: transform 0.3s;
+    filter: drop-shadow(0 0 7px white);
+    
+    &:before, &:after {
+      display: block;
+      content: "";
+      border-radius: var(--stroke-width);
+      background: currentColor;
+      height: 100%;
+      opacity: .7;
+    }
+
+    &:before {
+      height: calc(2 * var(--stroke-width));
+    }
+
+    &:after {
+      width: calc(2 * var(--stroke-width));
+      margin-top: calc(-2 * var(--stroke-width));
+    }
+  }
+
+  .is-open .chevron {
+    transform: rotate(-135deg);
   }
 }
