--- a/src/components/project-panel/styles.css
+++ b/src/components/project-panel/styles.css
@@ -1,59 +1,25 @@
-@keyframes borderSpin {
-  0% {
-    --border-gradient-angle: 0turn
-  }
-
-  100% {
-    --border-gradient-angle: 1turn
-  }
-}
-
 project-panel {
-  display: block;
-  position: relative;
-  --outer-radius: 8px;
-  --border-size: 3px;
-  --inner-radius: calc(var(--outer-radius) - var(--border-size));
-
-  /* border: 3px solid rgba(255, 255, 255, 0.07); */
-  border-radius: var(--outer-radius);
-  /* background: rgba(255, 255, 255, 0.07); */
-
-  --border-gradient-angle: 0turn;
-
-  box-shadow: 0px 0px 11px 3px rgba(255, 255, 255, 0.1);
-  transition: background-color 0.5s ease, transform 0.5s ease, box-shadow 0.5s ease;
-
-  /* padding: var(--border-size); */
-  /* overflow: hidden; */
-  /* padding: 15px; */
-
-
-  x-link {
-    display: block;
-    height: 100%;
-  }
+  /* border-radius: 15px; /* adds interesting accent at the corners */
+  /* box-shadow: 0px 0px 11px 3px rgba(255, 255, 255, 0.1); */
+  /* transition: background-color 0.5s ease, transform 0.5s ease, box-shadow 0.5s ease; */
 
   a {
-    height: 100%;
-    border-radius: var(--inner-radius);
-    color: var(--text-primary); 
-    display: flex;
-    text-decoration: none;
-    background-color: #ffffff11;
-    background: linear-gradient(136deg, rgba(255, 255, 255, 0.067) 0%, rgba(255, 255, 255, 0.12) 20%, rgba(255, 255, 255, 0.067) 40%, rgba(255, 255, 255, 0.067) 65%, rgba(255, 255, 255, 0.05) 75%, rgba(255, 255, 255, 0.067) 85%);
-    border: 2px solid #ffffff11;
-    /* background-color: rgba(11, 16, 43, 1); */
-    /* overflow: hidden;  needed for effect of border */ 
-    isolation: isolate;
-    align-items: center;
     padding: 15px 25px;
+    height: 100%;
+    /* border-radius: 5px; */
+    display: flex;
+    /* background-color: #ffffff11;
+    background: linear-gradient(136deg, rgba(255, 255, 255, 0.067) 0%, rgba(255, 255, 255, 0.12) 20%, rgba(255, 255, 255, 0.067) 40%, rgba(255, 255, 255, 0.067) 65%, rgba(255, 255, 255, 0.05) 75%, rgba(255, 255, 255, 0.067) 85%);
+    border: 2px solid #ffffff11; */
+    align-items: center;
+    /* padding: 15px 25px; */
   }
 
   &:hover {
-    background-color: rgba(255, 255, 255, 0.08);
+    /* transform: scale(1.05); */
+    /* background-color: rgba(255, 255, 255, 0.08);
     transform: scale(1.05);
-    box-shadow: 0px 0px 11px 3px rgba(255, 255, 255, 0.2);
+    box-shadow: 0px 0px 11px 3px rgba(255, 255, 255, 0.2); */
   }
 
   svg {
@@ -75,43 +41,4 @@ project-panel {
     font-weight: 300;
     font-size: 15px;
   }
-
 }
-
-/*
-.flash {
-  display: block;
-  position: absolute;
-  inset: 0;
-
-  background-size: contain;
-  pointer-events: none;
-
-
-  --color-a: #0901ffff;
-  --color-b: #ff01f7ff;
-  --color-c: #01eaffff;
-
-
-  background-image: conic-gradient(
-    from var(--border-gradient-angle) at 50% 50%,
-    transparent,
-    var(--color-a) 10%,
-    var(--color-b) 14%,
-    var(--color-c) 17%,
-    transparent 20%,
-    transparent 50%,
-    var(--color-a) 60%,
-    var(--color-b) 64%,
-    var(--color-c) 67%,
-    transparent 70%
-  );
-  animation: borderSpin 3s linear infinite 0ms;
-  transition: opacity 0.5s linear;
-  opacity: 0;
-}
-
-:host(:hover) .flash {
-  opacity: 1;
-}
-*/
