--- a/src/pages/project-steps-page/styles.css
+++ b/src/pages/project-steps-page/styles.css
@@ -39,10 +39,11 @@ project-steps-page {
     font-weight: 700;
   }
 
-  p {
+  p:not(:first-child) {
     margin-top: 18px;
-    
+  }
 
+  p {
     /* -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
     'Segoe UI Symbol' */
