--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -110,3 +110,24 @@ h1 {
   margin-block-end: 30px;
   text-shadow: 0 0 15px #fff;
 }
+
+.glass {
+  border-radius: 15px; /* adds interesting accent at the corners */
+  box-shadow: 0px 0px 11px 3px rgba(255, 255, 255, 0.1);
+  transition: background-color 0.5s ease, transform 0.5s ease, box-shadow 0.5s ease;
+
+  & > * {
+    display: block;
+    height: 100%;
+
+    border-radius: 5px;
+    background-color: #ffffff11;
+    background: linear-gradient(136deg, rgba(255, 255, 255, 0.067) 0%, rgba(255, 255, 255, 0.12) 20%, rgba(255, 255, 255, 0.067) 40%, rgba(255, 255, 255, 0.067) 65%, rgba(255, 255, 255, 0.05) 75%, rgba(255, 255, 255, 0.067) 85%);
+    border: 2px solid #ffffff11;
+  }
+
+  &:hover {
+    background-color: rgba(255, 255, 255, 0.08);
+    box-shadow: 0px 0px 11px 3px rgba(255, 255, 255, 0.2);
+  }
+}
