--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -39,7 +39,7 @@ p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
 }
 
-ul, ol {
+ul[class], ol[class] {
   list-style-type: none;
   margin: 0;
   padding: 0;
