--- a/src/components/accordion-panel/styles.css
+++ b/src/components/accordion-panel/styles.css
@@ -11,8 +11,8 @@ accordion-panel {
 
    */
 
-  details > summary:first-of-type {
-    list-style-type: none;
+  details summary::-webkit-details-marker {
+    display:none;
   }
 
   .content {
